Blog adding, updating, deleting done. Profile view, add, and update done.

--- a/blogs/templates/blogs/home.html
+++ b/blogs/templates/blogs/home.html
@@ -22,8 +22,10 @@
   </header>
 
   {% for message in messages %}
-    <div class="alert alert-primary" role="alert">
-      {{message}}
+    <div class="container">
+      <div class="alert alert-primary" role="alert">
+        {{message}}
+      </div>
     </div>
   {% endfor %}
   <!-- Main Content -->
