--- a/blogs/templates/blogs/profile.html
+++ b/blogs/templates/blogs/profile.html
@@ -56,4 +56,23 @@
     </div>
   </div>
 
+  <div class="d-flex justify-content-center">
+    <div class="pagination">
+      <span class="step-links">
+          {% if page_obj.has_previous %}
+              <a href="?page=1" class="btn btn-dark">First</a>
+              <a href="?page={{ page_obj.previous_page_number }}" class="btn btn-dark">&laquo;</a>
+          {% endif %}
+
+          <span class="current">
+              Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+          </span>
+
+          {% if page_obj.has_next %}
+              <a href="?page={{ page_obj.next_page_number }}" class="btn btn-dark">&raquo;</a>
+              <a href="?page={{ page_obj.paginator.num_pages }}" class="btn btn-dark">Last</a>
+          {% endif %}
+      </span>
+    </div>
+  </div>
 {% endblock header_body %}
