--- a/blogs/templates/registration/login.html
+++ b/blogs/templates/registration/login.html
@@ -1,14 +1,45 @@
 {% extends 'blogs/base.html' %}
 {% block extra_css %}
-    {% comment %} <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet"> {% endcomment %}
-    <style>
-        card {
-            background-color: red;
-        }
-    </style>
 {% endblock extra_css %}
-{% block header_body %}
- <div class="container pt-5">
+{% load crispy_forms_tags %}
+{% block header_body %}<nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand" href="{% url 'blogs:home' %}">Blogs For All</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        Menu
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'blogs:home' %}">Home</a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'blogs:blog-add' %}">Create New Blog</a>
+          </li>
+          
+          {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'blogs:profile' %}">Your Profile/Blogs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'blogs:logout' %}">Logout</a>
+            </li>
+          {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'blogs:register' %}">Register</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'blogs:login' %}">Login</a>
+            </li>
+          {% endif %}
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+ <div class="container pt-5" style="margin-top: 100px; margin-bottom: 307px;">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <div class="card">
@@ -16,7 +47,8 @@
                 <h1>Login</h1>
                 <form action="" method="POST">
                     {% csrf_token %}
-                    {{form.as_p}}
+                    {{form|crispy}}
+                    {% comment %} {{form.errors}} {% endcomment %}
                     <div class="row">
                         <div class="col-sm-6">
                             <a href="{% url 'blogs:register' %}" class="btn btn-dark">New user?</a>
@@ -27,7 +59,6 @@
                             </div>
                         </div>
                     </div>
-                    {{form.errors}}
                 </form>
             </div>
         </div>
