--- a/blogs/templates/blogs/blog_delete.html
+++ b/blogs/templates/blogs/blog_delete.html
@@ -1,6 +1,6 @@
 {% extends 'blogs/base.html' %}
 {% block title %}
-{{blog.title}}
+Delete
 {% endblock title %}
 {% load static %}
 {% block header_body %}
@@ -14,11 +14,7 @@
             <h1>{{blog.title}}</h1>
             <h2 class="subheading">{{blog.subject}}</h2>
             <span class="meta">Posted by
-              {% if blog.created_by == user %}
-              <a href="{% url 'blogs:profile' blog.created_by.id%}">{{blog.created_by}}</a>
-              {% else %}
-              <a href="{% url 'blogs:profile-detail' blog.created_by.id %}">{{blog.created_by}}</a>
-              {% endif %}
+              <a href="#">{{blog.created_by.username}}</a>
               on {{blog.pub_date}}</span>
           </div>
         </div>
@@ -32,14 +28,25 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <p>{{blog.body}}</p>
-          {% if user == blog.created_by %}
-            <div class="d-flex justify-content-end">
-                <a class="btn btn-primary mr-1" title="Edit" href="{% url 'blogs:blog-update' blog.id %}"><i class="fas fa-edit"></i></a>
-                <a class="btn btn-danger" title="Delete" href="{% url 'blogs:blog-delete' blog.id %}" ><i class="fas fa-trash-alt"></i></a>
-            </div>
-          {% endif %}
+          
         </div>
       </div>
     </div>
   </article>
+  <div class="container">
+  <hr>
+  </div>
+<div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <form method="post">{% csrf_token %}
+            <p>Are you sure you want to delete "{{ object }}"? This cannot be reversed.</p>
+            <div class="d-flex justify-content-center">
+                <a href="{% url 'blogs:profile' user.pk %}" class="btn btn-danger mr-1">Cancel</a>
+                <input type="submit" value="Confirm" class="btn btn-primary">
+            </div>
+        </form>
+        </div>
+      </div>
+    </div>
 {% endblock header_body %}
