--- a/blogs/templates/blogs/blog_update.html
+++ b/blogs/templates/blogs/blog_update.html
@@ -1,6 +1,6 @@
 {% extends 'blogs/base.html' %}
 {% block title %}
-Create
+Update
 {% endblock title %}
 {% load static %}
 {% block extra_css %}
@@ -9,15 +9,15 @@ Create
     display: none;
   }
   label[for="id_blog_image"]:hover{
-    transition: .2s;
     color: #0085a1;
     text-decoration: underline;
+    transition: .2s;
   }
  </style>
 {% endblock extra_css %}
 {% block header_body %}
 <!-- Page Header -->
-  <header class="masthead"  >
+  <header class="masthead" style = "background-image: url('{{ blog.blog_image.url}}');">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -39,8 +39,15 @@ Create
             </div>
             <div class="d-flex justify-content-center">
                 <div class="mt-4" style="margin-bottom: -100px;">
-                <label type="file" for="id_blog_image" class="btn" style="font-size: 175%;" title="Upload Cover Image"><i class="fas fa-file-image"></i></label>
-                {{form.blog_image}}
+                <div class="card">
+                <div class="card-body" style="padding: 0 12px 0 0;">
+                  <label for="id_blog_image" class="btn" style="font-size: 175%;" title="Upload Cover Image"><i class="fas fa-file-image"></i></label>
+                  {{form.blog_image}}
+                  {% if blog.blog_image %}
+                    <a href="{{blog.blog_image.url}}">Current Image</a>
+                  {% endif %}
+                  </div>
+                  </div>
                 </div>
             </div>
             </div>
@@ -59,7 +66,7 @@ Create
           {{ form.errors }}
           {{ form.non_field_errors }}
           <a href="{% url 'blogs:profile' user.pk %}" class="btn btn-danger mr-1">Cancel</a>
-          <input type="submit" class="btn-primary btn float-right" value="Post"></input>
+          <input type="submit" class="btn-primary btn float-right" value="Update"></input>
         </form>
         </div>
       </div>
