--- a/blogs/templates/profiles/profile_create.html
+++ b/blogs/templates/profiles/profile_create.html
@@ -1,9 +1,7 @@
 {% extends 'blogs/base.html' %}
 {% block title %}
-Login
+Edit Profile
 {% endblock title %}
-{% block extra_css %}
-{% endblock extra_css %}
 {% load crispy_forms_tags %}
 {% block header_body %}
 <nav class="navbar navbar-expand-lg bg-dark fixed-top" id="mainNav">
@@ -23,21 +21,21 @@ Login
             <a class="nav-link" href="{% url 'blogs:blog-add' %}" style="color: white;">Create New Blog</a>
           </li>
           
-          {% comment %} {% if user.is_authenticated %}
+          {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'blogs:profile' %}" style="color: white;">Your Profile/Blogs</a>
+              <a class="nav-link" href="{% url 'blogs:profile' user.pk %}" style="color: white;">Your Profile/Blogs</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'blogs:logout' %}" style="color: white;">Logout</a>
             </li>
-          {% else %} {% endcomment %}
+          {% else %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'blogs:register' %}" style="color: white;">Register</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'blogs:login' %}"style="color: white;" >Login</a>
             </li>
-          {% comment %} {% endif %} {% endcomment %}
+          {% endif %}
         </ul>
       </div>
     </div>
@@ -48,21 +46,15 @@ Login
       <div class="col-lg-8 col-md-10 mx-auto">
         <div class="card">
             <div class="card-body px-4">
-                <h1>Login</h1>
-                <form action="" method="POST">
+                <h1>Edit Profile</h1>
+                <form action="" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{form|crispy}}
                     {% comment %} {{form.errors}} {% endcomment %}
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <a href="{% url 'blogs:register' %}" style="font-size: 75%;">New user?</a>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="d-flex justify-content-end">
-                                <input type="submit" class="btn btn-primary">
-                            </div>
-                        </div>
-                    </div>
+                    <a href="{% url 'blogs:profile' user.pk %}" class="btn btn-danger mr-1">Cancel</a>
+                    <div class="float-right">
+                        <input type="submit" class="btn btn-primary">
+                    </div>       
                 </form>
             </div>
         </div>
