--- a/blogs/templates/blogs/blog_delete.html
+++ b/blogs/templates/blogs/blog_delete.html
@@ -27,7 +27,7 @@ Delete
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>{{blog.body}}</p>
+          <p>{{blog.body|safe}}</p>
           
         </div>
       </div>
