--- a/blogs/templates/blogs/base.html
+++ b/blogs/templates/blogs/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-
+  <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
@@ -46,7 +46,7 @@
           
           {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'blogs:profile' user.pk %}">Your Profile/Blogs</a>
+              <a class="nav-link" href="{% url 'blogs:profile' user.pk %}">Your Profile</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'blogs:logout' %}">Logout</a>
