--- a/blogs/templates/blogs/index.html
+++ b/blogs/templates/blogs/index.html
@@ -3,6 +3,7 @@
 All Blogs
 {% endblock title %}
 {% load static %}
+{% load blog_extras %}
 {% block header_body %}
 
   <!-- Page Header -->
@@ -12,8 +13,7 @@ All Blogs
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>All Blogs</h1>
-            <span class="subheading">Welcome to Blogs For All!</span>
+            <h1 style="margin-top: -90px;">All Blogs</h1>
           </div>
         </div>
       </div>
@@ -44,10 +44,25 @@ All Blogs
                         on {{blog.pub_date}}
                     </p>
                 </div>
+                <div class="d-flex justify-content-end" style="margin-top: -50px;">
+                     {% commented_this_blog blog user.id as commented_this_blog %}
+                    {% if commented_this_blog %}
+                    <span style="color: #0085a1;">
+                    {% else %}
+                    <span>
+                    {% endif %}
+                    <i class="fas fa-comment-alt "></i></span>&thinsp;{{blog.comments.count}}  
+                    {% liked_this_blog blog user.id as liked_this_blog %}
+                    {% if liked_this_blog %}
+                    <span style="color: #dc3545;">
+                    {% else %}
+                    <span>
+                    {% endif %}
+                    <i class="fas fa-heart ml-2"></i></span>&thinsp;{{blog.likes.count}}
+                </div>
                 <hr> 
             {% endfor %}
         {% endif %}
-        <!-- Pager -->
       </div>
     </div>
   </div>
